--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -25,7 +25,7 @@
   {% if nav_footer_custom != "" %}
     {{ nav_footer_custom }}
   {% else %}
-    <footer class="site-footer">
+    <footer class="site-footer" align="center">
       Made in Chico, California
     </footer>
   {% endif %}
